Cleaned up module gathering.

--- a/appendices/appendices.tex
+++ b/appendices/appendices.tex
@@ -1,7 +1,7 @@
 \section{Appendices}
 
-\input{consort/index.tex}
+\input{appendices/consort/index.tex}
 
-\input{zaira/index.tex}
+\input{appendices/zaira/index.tex}
 
-\input{armilla/index.tex}
+\input{appendices/armilla/index.tex}
