--- a/main.tex
+++ b/main.tex
@@ -1,1 +1,9 @@
-\include{appendices/appendices.tex}
+\documentclass{article}
+\usepackage{graphicx}
+\usepackage{listings}
+
+\begin{document}
+
+\include{appendices/appendices}
+
+\end{document}
