Improved styling and code scraping.

--- a/appendices/appendices.tex
+++ b/appendices/appendices.tex
@@ -1,7 +1,7 @@
-\section{Appendices}
+\begin{singlespacing}
 
-\input{appendices/consort/index.tex}
+    \input{appendices/consort/index.tex}
+    \input{appendices/zaira/index.tex}
+    \input{appendices/armilla/index.tex}
 
-\input{appendices/zaira/index.tex}
-
-\input{appendices/armilla/index.tex}
+\end{singlespacing}
