--- a/dissertation.tex
+++ b/dissertation.tex
@@ -9,19 +9,23 @@
 \definecolor{bluekeywords}{rgb}{0.13,0.13,1}
 \definecolor{greencomments}{rgb}{0,0.5,0}
 \definecolor{redstrings}{rgb}{0.9,0,0}
+\definecolor{grey}{rgb}{0.5,0.5,0.5}
 
 \usepackage{listings}
 \lstset{language=Python,
-showspaces=false,
-showtabs=false,
-breaklines=false,
-showstringspaces=false,
+basicstyle=\footnotesize\ttfamily,
 breakatwhitespace=false,
-escapeinside={(*@}{@*)},
+breaklines=false,
 commentstyle=\color{greencomments},
+escapeinside={(*@}{@*)},
 keywordstyle=\color{bluekeywords}\bfseries,
-stringstyle=\color{redstrings},
-basicstyle=\footnotesize\ttfamily
+numbers=left,
+numbersep=5pt,
+numberstyle=\tiny\color{grey},
+showspaces=false,
+showstringspaces=false,
+showtabs=false,
+stringstyle=\color{redstrings}
 }
 
 %\lstset{
