Updated front matter.

--- a/frontmatter/dedication.tex
+++ b/frontmatter/dedication.tex
@@ -1,3 +1,11 @@
 % dedication text
 
-This is the dedication.
+For Cindy.
+
+\begin{figure}
+    \vspace{50pt}
+    \centering
+    \includegraphics[width=0.51\textwidth]{frontmatter/holbein-astrologer.jpg}
+    \\
+    \emph{The Astrologer} from Hans Holbein's \emph{Danse Macabre}
+\end{figure}
