--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -1,3 +1,13 @@
 % the acknowledgments section
 
-\newthought{Lorem ipsum dolor sit amet}, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit. Nulla facilisi. Nulla libero. Vivamus pharetra posuere sapien. Nam consectetuer. Sed aliquam, nunc eget euismod ullamcorper, lectus nunc ullamcorper orci, fermentum bibendum enim nibh eget ipsum. Donec porttitor ligula eu dolor. Maecenas vitae nulla consequat libero cursus venenatis. Nam magna enim, accumsan eu, blandit sed, blandit a, eros.
+\newthought{I would like to thank:}
+
+My childhood music teachers: Dr. John McCann, Beth Welty, Howard Frazin.
+
+My Abjad collaborators, Trevor Ba\v{c}a and Jeff Trevi\~{n}o.
+
+My family.
+
+The cats, not that they care.
+
+My partner, Cindy.
