Cleaned up dissertation layout.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -49,11 +49,11 @@
 
 \include{chapters/introduction}
 
-%\include{chapters/chapter1}
+\include{chapters/mise-en-place}
 
-%\include{chapters/chapter2}
+\include{chapters/abjad}
 
-%\include{chapters/chapter3}
+\include{chapters/consort}
 
 \include{chapters/aurora}
 
