--- a/endmatter/colophon.tex
+++ b/endmatter/colophon.tex
@@ -6,7 +6,9 @@
     \centering
     \includegraphics[width=0.51\textwidth]{endmatter/holbein-physician.jpg}
     \\
-    \emph{The Physician} from Hans Holbein's \emph{Danse Macabre}
+    \emph{The Physician}
+    \\
+    from Hans Holbein's \emph{Danse Macabre}
 \end{figure}
 
 % If you don't want an image in the colophon:
