--- a/frontmatter/dedication.tex
+++ b/frontmatter/dedication.tex
@@ -7,5 +7,7 @@ For Cindy.
     \centering
     \includegraphics[width=0.51\textwidth]{frontmatter/holbein-astrologer.jpg}
     \\
-    \emph{The Astrologer} from Hans Holbein's \emph{Danse Macabre}
+    \emph{The Astrologer}
+    \\
+    from Hans Holbein's \emph{Danse Macabre}
 \end{figure}
