--- a/frontmatter/thanks.tex
+++ b/frontmatter/thanks.tex
@@ -4,10 +4,35 @@
 
 My childhood music teachers: Dr. John McCann, Beth Welty, Howard Frazin.
 
-My Abjad collaborators, Trevor Ba\v{c}a and Jeff Trevi\~{n}o.
+My composition teachers at Oberlin, Lewis Nielson and Randolph Coleman.
 
-My family.
+The open source community, especially Python and LilyPond.
+
+Amie Weiss.
+
+Jon Hepfer.
+
+Kristin Anderson.
+
+Myke Cuthbert.
+
+Steve Takasugi.
+
+Rand Steiger.
+
+Hans Tutschku and Chaya Czernowin.
+
+My Abjad collaborators, Trevor Ba\v{c}a and Jeff Trevi\~{n}o, and everyone who
+supports and benefits from that project.
+
+Edgar Barroso.
+
+All of my friends and colleagues at Harvard and beyond.
+
+All of the wonderful musicians who've given my music a chance.
 
 The cats, not that they care.
+
+My family, who do.
 
 My partner, Cindy.
