Improved code font size and personalization.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -15,7 +15,7 @@
 
 \usepackage{listings}
 \lstset{
-    basicstyle=\footnotesize\ttfamily,
+    basicstyle=\scriptsize\ttfamily,
     breakatwhitespace=false,
     breaklines=false,
     commentstyle=\color{greencomments},
@@ -59,9 +59,9 @@
 
 \include{chapters/plague-water}
 
-\include{chapters/armilla}
-
 \include{chapters/zaira}
+
+\include{chapters/armilla}
 
 \include{chapters/ersilia}
 
