--- a/frontmatter/personalize.tex
+++ b/frontmatter/personalize.tex
@@ -1,11 +1,11 @@
 % Some details about the dissertation.
 \title{How to cook an egg}
-\author{Josiah W. Oberholtzer}
+\author{Josiah Wolf Oberholtzer}
 \advisor{Hans Tutschku \& Chaya Czernowin}
 
 % ... about the degree.
 \degree{Doctor of Philosophy}
-\field{Psychology}
+\field{Music Composition}
 \degreeyear{2015}
 \degreemonth{May}
 \department{Music}
