--- a/dissertation.tex
+++ b/dissertation.tex
@@ -61,7 +61,11 @@
 
 \include{chapters/consort}
 
-\include{chapters/timespans}
+\include{chapters/time}
+
+\include{chapters/timemanager}
+
+\include{chapters/handlers}
 
 \include{chapters/aurora}
 
