--- a/dissertation.tex
+++ b/dissertation.tex
@@ -35,7 +35,7 @@
 
 \frontmatter
 \pagenumbering{roman}
-\input{frontmatter/personalize}
+\input{source/frontmatter/personalize}
 \maketitle
 \copyrightpage
 \abstractpage
@@ -51,34 +51,34 @@
 \setcounter{page}{1}
 \setcounter{chapter}{-1}
 
-\include{chapters/introduction}
+\include{source/chapters/introduction}
 
-\include{chapters/mise-en-place}
+\include{source/chapters/mise-en-place}
 
-\include{chapters/abjad}
+\include{source/chapters/abjad}
 
-\include{chapters/composition}
+\include{source/chapters/composition}
 
-\include{chapters/time}
+\include{source/chapters/time}
 
-\include{chapters/timemanager}
+\include{source/chapters/timemanager}
 
-\include{chapters/handlers}
+\include{source/chapters/handlers}
 
-\include{chapters/aurora}
+\include{source/chapters/aurora}
 
-\include{chapters/plague-water}
+\include{source/chapters/plague-water}
 
-\include{chapters/zaira}
+\include{source/chapters/zaira}
 
-\include{chapters/armilla}
+\include{source/chapters/armilla}
 
-\include{chapters/ersilia}
+\include{source/chapters/ersilia}
 
-\include{chapters/conclusion}
+\include{source/chapters/conclusion}
 
 \begin{appendices}
-    \include{appendices/appendices}
+    \include{source/appendices/appendices}
 \end{appendices}
 
 \singlespacing
@@ -89,6 +89,6 @@
 \addcontentsline{toc}{chapter}{References}
 \bibliographystyle{apalike2}
 
-\include{endmatter/colophon}
+\include{source/endmatter/colophon}
 
 \end{document}
