--- a/packages/Harvard/style.sty
+++ b/packages/Harvard/style.sty
@@ -74,7 +74,7 @@
 	\vspace*{20pt}
 	\scshape Abstract \\ \rm
 	\end{center}
-	\input{frontmatter/abstract}
+	\input{source/frontmatter/abstract}
 	\vspace*{\fill}
 	\newpage \lhead{} \rhead{}
 	\cfoot{\thepage}
@@ -82,13 +82,13 @@
 
 \newcommand{\dedicationpage}{
 	\newpage \thispagestyle{fancy} \vspace*{\fill}
-	\scshape \noindent \input{frontmatter/dedication}
+	\scshape \noindent \input{source/frontmatter/dedication}
 	\vspace*{\fill} \newpage \rm
 }
 
 \newcommand{\acknowledgments}{
 	\chapter*{Acknowledgments}
 	\noindent
-	\input{frontmatter/thanks}
+	\input{source/frontmatter/thanks}
 	\vspace*{\fill}
 }
