Outlining chapter on time, rhythm and meter.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -1,8 +1,6 @@
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 
-% Modify the following line to match your school
-% Available options include `Harvard`, `Princeton`, and `NYU`.
 \documentclass[School=Harvard]{Dissertate}
 
 \usepackage{pdfpages}
@@ -30,6 +28,8 @@
     showtabs=false,
     stringstyle=\color{redstrings}
 }
+
+\includeonly{source/chapters/time}
 
 \begin{document}
 
