Cleaned up source.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -29,7 +29,7 @@
     stringstyle=\color{redstrings}
 }
 
-\includeonly{source/chapters/time}
+%\includeonly{source/chapters/time}
 
 \begin{document}
 
