Tinkered with things.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -3,7 +3,7 @@
 
 \documentclass[School=Harvard]{Dissertate}
 
-\geometry{letterpaper, margin=1in}
+\geometry{a4paper, margin=1in}
 
 \usepackage{pdfpages}
 
@@ -75,7 +75,6 @@
 
 \singlespacing
 
-% the back matter
 \clearpage
 \bibliography{references}
 \addcontentsline{toc}{chapter}{References}
