--- a/source/frontmatter/thanks.tex
+++ b/source/frontmatter/thanks.tex
@@ -2,30 +2,30 @@
 
 \newthought{I would like to thank:}
 
-My childhood music teachers: Dr. John McCann, Beth Welty, Howard Frazin.
-
-My composition teachers at Oberlin, Lewis Nielson and Randolph Coleman.
-
-The open source community, especially Python and LilyPond.
-
-Amie Weiss.
-
-Jon Hepfer.
-
-Kristin Anderson.
-
-Myke Cuthbert.
-
-Steve Takasugi.
-
-Rand Steiger.
-
-Hans Tutschku and Chaya Czernowin.
-
-My Abjad collaborators, Trevor Ba\v{c}a and Jeff Trevi\~{n}o, and everyone who
-supports and benefits from that project.
-
-Edgar Barroso.
+%My childhood music teachers: Dr. John McCann, Beth Welty, Howard Frazin.
+%
+%My composition teachers at Oberlin, Lewis Nielson and Randolph Coleman.
+%
+%The open source community, especially Python and LilyPond.
+%
+%Amie Weiss.
+%
+%Jon Hepfer.
+%
+%Kristin Anderson.
+%
+%Myke Cuthbert.
+%
+%Steve Takasugi.
+%
+%Rand Steiger.
+%
+%Hans Tutschku and Chaya Czernowin.
+%
+%My Abjad collaborators, Trevor Ba\v{c}a and Jeff Trevi\~{n}o, and everyone who
+%supports and benefits from that project.
+%
+%Edgar Barroso.
 
 All of my friends and colleagues at Harvard and beyond.
 
