--- a/dissertation.tex
+++ b/dissertation.tex
@@ -5,35 +5,33 @@
 
 \geometry{a4paper, margin=1in}
 
+\usepackage{color}
+\usepackage{listings}
 \usepackage{pdfpages}
 
-\usepackage{color}
 \definecolor{bluekeywords}{rgb}{0.13,0.13,1}
 \definecolor{greencomments}{rgb}{0,0.5,0}
 \definecolor{redstrings}{rgb}{0.9,0,0}
 \definecolor{grey}{rgb}{0.5,0.5,0.5}
+\definecolor{lightgrey}{rgb}{0.75,0.75,0.75}
 
-\usepackage{listings}
 \lstset{
     basicstyle=\scriptsize\ttfamily,
     breakatwhitespace=false,
     breaklines=false,
     commentstyle=\color{greencomments},
     escapeinside={(*@}{@*)},
+    frame=l,
+    framerule=1.5pt,
+    framesep=6pt,
+    %rulecolor=\color{lightgrey},
     keywordstyle=\color{bluekeywords}\bfseries,
     language=Python,
-    numbers=left,
-    numbersep=5pt,
-    numberstyle=\tiny\color{grey},
     showspaces=false,
     showstringspaces=false,
     showtabs=false,
     stringstyle=\color{redstrings},
-    %frame=l,
-    %numbers=none
 }
-
-%\includeonly{source/chapters/time}
 
 \begin{document}
 
@@ -72,6 +70,24 @@
 \include{source/chapters/score-ersilia}
 
 \include{source/chapters/conclusion}
+
+\lstset{
+    basicstyle=\scriptsize\ttfamily,
+    breakatwhitespace=false,
+    breaklines=false,
+    commentstyle=\color{greencomments},
+    escapeinside={(*@}{@*)},
+    keywordstyle=\color{bluekeywords}\bfseries,
+    language=Python,
+    frame=none,
+    numbers=left,
+    numbersep=5pt,
+    numberstyle=\tiny\color{grey},
+    showspaces=false,
+    showstringspaces=false,
+    showtabs=false,
+    stringstyle=\color{redstrings},
+}
 
 \begin{appendices}
     \include{source/appendices/appendices}
