Commented out scores and appendices.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -63,11 +63,11 @@
 \include{source/chapters/interpretation-1}
 \include{source/chapters/interpretation-2}
 
-\include{source/chapters/score-aurora}
-\include{source/chapters/score-plague-water}
-\include{source/chapters/score-zaira}
-\include{source/chapters/score-armilla}
-\include{source/chapters/score-ersilia}
+%\include{source/chapters/score-aurora}
+%\include{source/chapters/score-plague-water}
+%\include{source/chapters/score-zaira}
+%\include{source/chapters/score-armilla}
+%\include{source/chapters/score-ersilia}
 
 \include{source/chapters/conclusion}
 
@@ -90,7 +90,7 @@
 }
 
 \begin{appendices}
-    \include{source/appendices/appendices}
+%    \include{source/appendices/appendices}
 \end{appendices}
 
 \singlespacing
