--- a/source/endmatter/colophon.tex
+++ b/source/endmatter/colophon.tex
@@ -1,6 +1,5 @@
 \newpage
 
-% If you do want an image in the colophon:
 \begin{figure}
     \vspace{50pt}
     \centering
@@ -11,12 +10,11 @@
     from Hans Holbein's \emph{Danse Macabre}
 \end{figure}
 
-% If you don't want an image in the colophon:
-% \vspace*{200pt}
-
 \begin{center}
 \parbox{200pt}{\lettrine[lines=3,slope=-2pt,nindent=-4pt]{\textcolor{SchoolColor}{T}}{his
 thesis was typeset} using \LaTeX, originally developed by Leslie Lamport and
 based on Donald Knuth's \TeX. The body text is set in 11 point Egenolff-Berner
-Garamond, a revival of Claude Garamont's humanist typeface. }
+Garamond, a revival of Claude Garamont's humanist typeface. The interactive
+Python interpreter examples, and their graphic output, were handled by the
+\emph{abjad-book} tool. }
 \end{center}
