Improved title spacing.

--- a/Dissertate.cls
+++ b/Dissertate.cls
@@ -33,7 +33,7 @@
 
 \RequirePackage{color}
 \usepackage{hyperref}
-\RequirePackage[tiny, md, sc]{titlesec}
+\RequirePackage[small, md, sc, compact]{titlesec}
 \setlength{\headheight}{15pt}
 \pagestyle{plain}
 \RequirePackage{titling}
