--- a/dissertation.tex
+++ b/dissertation.tex
@@ -33,6 +33,12 @@
     stringstyle=\color{redstrings},
 }
 
+%\titleformat*{\section}{\large\bfseries}
+%\titleformat*{\subsection}{\normalsize\bfseries}
+%\titleformat*{\subsubsection}{\normalsize\bfseries}
+%\titleformat*{\paragraph}{\large\bfseries}
+%\titleformat*{\subparagraph}{\large\bfseries}
+
 \begin{document}
 
 \frontmatter
