--- a/dissertation.tex
+++ b/dissertation.tex
@@ -6,6 +6,7 @@
 \geometry{a4paper, margin=1in}
 
 \usepackage{color}
+\usepackage{csquotes}
 \usepackage{listings}
 \usepackage{pdfpages}
 \usepackage{textcomp}
