Wrote about timespans.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -41,7 +41,7 @@
 %\titleformat*{\paragraph}{\large\bfseries}
 %\titleformat*{\subparagraph}{\large\bfseries}
 
-%\includeonly{source/chapters/time-tools}
+\includeonly{source/chapters/time-tools}
 
 \begin{document}
 
