Wrote about timespan inventories.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -49,12 +49,12 @@
 \pagenumbering{roman}
 \input{source/frontmatter/personalize}
 \maketitle
-\copyrightpage
-\abstractpage
+%\copyrightpage
+%\abstractpage
 \tableofcontents
 %\listoffigures
-\dedicationpage
-\acknowledgments
+%\dedicationpage
+%\acknowledgments
 
 \mainmatter
 \doublespacing
@@ -106,7 +106,7 @@
     \include{source/appendices/appendices}
 \end{appendices}
 \clearpage
-\bibliography{references}
+%\bibliography{references}
 \addcontentsline{toc}{chapter}{References}
 \bibliographystyle{apalike2}
 
