Adjusted root .tex file.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -41,7 +41,10 @@
 %\titleformat*{\paragraph}{\large\bfseries}
 %\titleformat*{\subparagraph}{\large\bfseries}
 
-\includeonly{source/chapters/time-tools}
+\includeonly{
+    source/chapters/a-model-of-notation,
+    source/chapters/time-tools,
+}
 
 \begin{document}
 
