Added interpretation-1 chapter into include list.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -44,6 +44,7 @@
 \includeonly{
     source/chapters/a-model-of-notation,
     source/chapters/time-tools,
+    source/chapters/interpretation-1,
 }
 
 \begin{document}
