--- a/dissertation.tex
+++ b/dissertation.tex
@@ -42,9 +42,14 @@
 %\titleformat*{\subparagraph}{\large\bfseries}
 
 \includeonly{
+    source/chapters/introduction,
+    source/chapters/mise-en-place,
+    source/chapters/a-model-of-composition,
     source/chapters/a-model-of-notation,
     source/chapters/time-tools,
-    source/chapters/interpretation-1,
+    source/chapters/consort-analysis,
+    source/chapters/project,
+    source/chapters/conclusion,
 }
 
 \begin{document}
@@ -70,12 +75,10 @@
 \include{source/chapters/introduction}
 
 \include{source/chapters/mise-en-place}
-\include{source/chapters/a-model-of-notation}
 \include{source/chapters/a-model-of-composition}
+\include{source/chapters/a-model-of-notation}
 \include{source/chapters/time-tools}
-\include{source/chapters/specification}
-\include{source/chapters/interpretation-1}
-\include{source/chapters/interpretation-2}
+\include{source/chapters/consort-analysis}
 \include{source/chapters/project}
 
 \include{source/chapters/score-aurora}
