--- a/source/frontmatter/dedication.tex
+++ b/source/frontmatter/dedication.tex
@@ -1,6 +1,8 @@
 % dedication text
 
-For Cindy.
+For Cindy\\ 
+\vspace{\baselineskip}
+\emph{Rhythm is a dancer.}
 
 \begin{figure}
     \vspace{50pt}
