Improved rest consolidation example.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -8,10 +8,11 @@
 \usepackage{color}
 \usepackage{csquotes}
 \usepackage{excludeonly}
+\usepackage{fancyvrb}
 \usepackage{listings}
+\usepackage{multicol}
 \usepackage{pdfpages}
 \usepackage{textcomp}
-\usepackage{fancyvrb}
 
 \newenvironment{markdown}{
     \VerbatimEnvironment
