--- a/source/endmatter/colophon.tex
+++ b/source/endmatter/colophon.tex
@@ -15,6 +15,7 @@
 thesis was typeset} using \LaTeX, originally developed by Leslie Lamport and
 based on Donald Knuth's \TeX. The body text is set in 11 point Egenolff-Berner
 Garamond, a revival of Claude Garamont's humanist typeface. The interactive
-Python interpreter examples, and their graphic output, were handled by the
-\emph{abjad-book} tool. }
+Python interpreter examples and their graphic output were managed by the
+\emph{abjad-book} tool. Notation examples were rendered by LilyPond.
+Graph-theoretic examples were rendered by Graphviz. }
 \end{center}
