Improved graphics layout everywhere.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -13,6 +13,7 @@
 \usepackage{multicol}
 \usepackage{pdfpages}
 \usepackage{textcomp}
+\usepackage[export]{adjustbox}
 
 \newenvironment{markdown}{
     \VerbatimEnvironment
