Updated example documents.

--- a/assets/example-document.tex
+++ b/assets/example-document.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[a4paper,twocolumn]{article}
 
 \usepackage{lipsum}
 
@@ -10,14 +10,15 @@
 \maketitle
 
 \begin{abstract}
-This is the abstract to the document.
+This is the abstract to the document. The document is in two columns and
+contains paragraphs made out of lorem ipsum dummy text.
 \end{abstract}
 
-\section{A section}
+\section{Introduction}
 
 \lipsum[1]
 
-\section{Another section}
+\section{An enumerated list}
 
 Here is a list:
 
@@ -27,6 +28,8 @@ Here is a list:
     \item A final list item.
 \end{enumerate}
 
-\lipsum[2]
+\section{Conclusion}
+
+\lipsum[2-4]
 
 \end{document}
