Integrated LaTeX and LilyPond into introduction.

--- a/assets/example-document.tex
+++ b/assets/example-document.tex
@@ -10,8 +10,9 @@
 \maketitle
 
 \begin{abstract}
-This is the abstract to the document. The document is in two columns and
-contains paragraphs made out of lorem ipsum dummy text.
+This is the abstract to the document. The document
+is in two columns and contains paragraphs made out 
+of lorem ipsum dummy text.
 \end{abstract}
 
 \section{Introduction}
