--- a/dissertation.tex
+++ b/dissertation.tex
@@ -48,6 +48,10 @@
     upquote=true,
 }
 
+\lstdefinestyle{beep}{
+    language=[LaTeX]TeX,
+}
+
 %\titleformat*{\section}{\large\bfseries}
 %\titleformat*{\subsection}{\normalsize\bfseries}
 %\titleformat*{\subsubsection}{\normalsize\bfseries}
