--- a/dissertation.tex
+++ b/dissertation.tex
@@ -3,7 +3,11 @@
 
 \documentclass[oneside,School=Harvard]{Dissertate}
 
-\geometry{a4paper,margin=1in,showframe=true}
+\geometry{
+    a4paper,
+    margin=1in,
+    showframe=true,
+}
 
 \usepackage[export]{adjustbox}
 \usepackage{color}
