Wrote about rhythm-makers.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -19,6 +19,7 @@
 \usepackage{multicol}
 \usepackage{pdfpages}
 \usepackage{textcomp}
+\usepackage{microtype}
 
 \usepackage[
     labelfont={sc,scriptsize},
