--- a/source/frontmatter/personalize.tex
+++ b/source/frontmatter/personalize.tex
@@ -1,5 +1,5 @@
 % Some details about the dissertation.
-\title{\emph{Consort}: A Model of Composition}
+\title{A Computational Model of Composition}
 \author{Josiah Wolf Oberholtzer}
 \advisor{Hans Tutschku \& Chaya Czernowin}
 
