Adjusted root TeX file.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -141,10 +141,10 @@
     upquote=true,
 }
 
-%\singlespacing
-%\begin{appendices}
-%    \include{source/appendices/appendices}
-%\end{appendices}
+\singlespacing
+\begin{appendices}
+    \include{source/appendices/appendices}
+\end{appendices}
 
 %\cleardoublepage
 %\printindex
