--- a/dissertation.tex
+++ b/dissertation.tex
@@ -74,7 +74,7 @@
 \includeonly{
 %    source/chapters/introduction,
 %    source/chapters/a-model-of-notation,
-%    source/chapters/time-tools,
+    source/chapters/time-tools,
     source/chapters/a-model-of-composition,
 %    source/chapters/practicalities,
 %    source/chapters/conclusion,
