Added more entries to the bibliography.

--- a/references.bib
+++ b/references.bib
@@ -1,17 +1,102 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Josiah Wolf Oberholtzer at 2015-03-11 12:03:48 -0700 
+%% Created for Josiah Wolf Oberholtzer at 2015-03-11 12:19:59 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@article{trevino2013compositional,
+@book{cormen2009introduction,
+	Author = {Thomas H. Cormen and Charles E. Leiserson and Ronald L. Rivest and Clifford Stein},
+	Date-Added = {2015-03-11 19:19:30 +0000},
+	Date-Modified = {2015-03-11 19:19:40 +0000},
+	Isbn = {0262033844},
+	Publisher = {The MIT Press},
+	Title = {Introduction to Algorithms, 3rd Edition},
+	Url = {http://www.amazon.com/Introduction-Algorithms-Edition-Thomas-Cormen/dp/0262033844%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0262033844},
+	Year = {2009},
+	Bdsk-Url-1 = {http://www.amazon.com/Introduction-Algorithms-Edition-Thomas-Cormen/dp/0262033844%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0262033844}}
+
+@book{lerdahl1985generative,
+	Author = {Lerdahl, Fred and Jackendoff, Ray},
+	Date-Added = {2015-03-11 19:16:23 +0000},
+	Date-Modified = {2015-03-11 19:16:23 +0000},
+	Publisher = {MIT press},
+	Title = {A generative theory of tonal music},
+	Year = {1985}}
+
+@book{leguin1972farthest,
+	Author = {Ursula LeGuin},
+	Date-Added = {2015-03-11 19:13:43 +0000},
+	Date-Modified = {2015-03-11 19:13:51 +0000},
+	Isbn = {0689300549},
+	Publisher = {Atheneum},
+	Title = {The Farthest Shore},
+	Url = {http://www.amazon.com/The-Farthest-Shore-Ursula-LeGuin/dp/0689300549%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0689300549},
+	Year = {1972},
+	Bdsk-Url-1 = {http://www.amazon.com/The-Farthest-Shore-Ursula-LeGuin/dp/0689300549%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0689300549}}
+
+@book{calvino1978invisible,
+	Author = {Italo Calvino},
+	Date-Added = {2015-03-11 19:12:02 +0000},
+	Date-Modified = {2015-03-11 19:12:13 +0000},
+	Isbn = {0156453800},
+	Publisher = {Harcourt Brace Jovanovich},
+	Title = {Invisible Cities},
+	Url = {http://www.amazon.com/Invisible-Cities-Italo-Calvino/dp/0156453800%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0156453800},
+	Year = {1978},
+	Bdsk-Url-1 = {http://www.amazon.com/Invisible-Cities-Italo-Calvino/dp/0156453800%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0156453800}}
+
+@book{marriott1998programming,
+	Author = {Marriott, Kim and Stuckey, Peter J},
+	Date-Added = {2015-03-11 19:10:14 +0000},
+	Date-Modified = {2015-03-11 19:10:14 +0000},
+	Publisher = {MIT press},
+	Title = {Programming with constraints: an introduction},
+	Year = {1998}}
+
+@book{cope2005computer,
+	Author = {Cope, David},
+	Date-Added = {2015-03-11 19:09:46 +0000},
+	Date-Modified = {2015-03-11 19:09:46 +0000},
+	Publisher = {MIT Press Cambridge},
+	Title = {Computer models of musical creativity},
+	Year = {2005}}
+
+@book{tufte1983visual,
+	Author = {Tufte, Edward R and Graves-Morris, PR},
+	Date-Added = {2015-03-11 19:09:20 +0000},
+	Date-Modified = {2015-03-11 19:09:20 +0000},
+	Publisher = {Graphics press Cheshire, CT},
+	Title = {The visual display of quantitative information},
+	Volume = {2},
+	Year = {1983}}
+
+@book{mackay2003information,
+	Author = {MacKay, David JC},
+	Date-Added = {2015-03-11 19:08:44 +0000},
+	Date-Modified = {2015-03-11 19:08:44 +0000},
+	Publisher = {Citeseer},
+	Title = {Information theory, inference, and learning algorithms},
+	Volume = {7},
+	Year = {2003}}
+
+@book{ishikawa1977pattern,
+	Author = {Ishikawa, Sara and Silverstein, Murray},
+	Date-Added = {2015-03-11 19:08:14 +0000},
+	Date-Modified = {2015-03-11 19:08:14 +0000},
+	Publisher = {Oxford University Press},
+	Title = {A pattern language: towns, buildings, construction},
+	Volume = {2},
+	Year = {1977}}
+
+@phdthesis{trevino2013compositional,
 	Author = {Trevino, Jeffrey Robert},
 	Date-Added = {2015-03-11 19:03:30 +0000},
-	Date-Modified = {2015-03-11 19:03:30 +0000},
+	Date-Modified = {2015-03-11 19:12:34 +0000},
+	School = {UCSD},
 	Title = {Compositional and analytic applications of automated music notation via object-oriented programming},
 	Year = {2013}}
 
