--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Josiah Wolf Oberholtzer at 2015-03-11 12:19:59 -0700 
+%% Created for Josiah Wolf Oberholtzer at 2015-03-12 12:39:19 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@phdthesis{nauert1997timespan,
+	Author = {Nauert, Paul Charles},
+	Date-Added = {2015-03-12 19:39:07 +0000},
+	Date-Modified = {2015-03-12 19:39:17 +0000},
+	Publisher = {Columbia University},
+	Title = {Timespan formation in nonmetric, posttonal music},
+	Year = {1997}}
 
 @book{cormen2009introduction,
 	Author = {Thomas H. Cormen and Charles E. Leiserson and Ronald L. Rivest and Clifford Stein},
