--- a/dissertation.tex
+++ b/dissertation.tex
@@ -75,7 +75,7 @@
 %    source/chapters/introduction,
 %    source/chapters/a-model-of-notation,
     source/chapters/time-tools,
-%    source/chapters/a-model-of-composition,
+    source/chapters/a-model-of-composition,
 %    source/chapters/practicalities,
 %    source/chapters/conclusion,
 }
