--- a/dissertation.tex
+++ b/dissertation.tex
@@ -71,22 +71,23 @@
     language=[LaTeX]TeX,
 }
 
-\includeonly{
+%\includeonly{
 %    source/chapters/introduction,
 %    source/chapters/a-model-of-notation,
-    source/chapters/time-tools,
-    source/chapters/a-model-of-composition,
+%    source/chapters/time-tools,
+%    source/chapters/a-model-of-composition,
 %    source/chapters/practicalities,
 %    source/chapters/conclusion,
-}
-
-%\excludeonly{
-%    source/chapters/score-aurora,
-%    source/chapters/score-plague-water,
-%    source/chapters/score-zaira,
-%    source/chapters/score-armilla,
-%    source/chapters/score-ersilia,
 %}
+
+\excludeonly{
+    source/chapters/score-aurora,
+    source/chapters/score-plague-water,
+    source/chapters/score-zaira,
+    source/chapters/score-armilla,
+    source/chapters/score-ersilia,
+    source/appendices/appendices,
+}
 
 \makeindex[columns=3, title=Index, intoc]
 
@@ -96,31 +97,35 @@
 \pagenumbering{roman}
 \input{source/frontmatter/personalize}
 \maketitle
-%\copyrightpage
-%\abstractpage
+\copyrightpage
+\abstractpage
 \tableofcontents
 %\listoffigures
-%\dedicationpage
-%\acknowledgments
+\dedicationpage
+\acknowledgments
 
 \mainmatter
 \doublespacing
 \cleardoublepage
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\setcounter{chapter}{-1}
+
+\part{Theory}
 
 \include{source/chapters/introduction}
 \include{source/chapters/a-model-of-notation}
 \include{source/chapters/time-tools}
 \include{source/chapters/a-model-of-composition}
 \include{source/chapters/practicalities}
+\include{source/chapters/conclusion}
+
+\part{Practice}
+
 \include{source/chapters/score-aurora}
 \include{source/chapters/score-plague-water}
 \include{source/chapters/score-zaira}
 \include{source/chapters/score-armilla}
 \include{source/chapters/score-ersilia}
-\include{source/chapters/conclusion}
 
 \lstset{
     basicstyle=\scriptsize\ttfamily,
@@ -146,14 +151,14 @@
     \include{source/appendices/appendices}
 \end{appendices}
 
-%\cleardoublepage
-%\printindex
+\cleardoublepage
+\printindex
 
-%\cleardoublepage
-%\addcontentsline{toc}{chapter}{References}
-%\bibliographystyle{apalike2}
-%\bibliography{references}
+\cleardoublepage
+\addcontentsline{toc}{chapter}{References}
+\bibliographystyle{apalike2}
+\bibliography{references}
 
-%\include{source/endmatter/colophon}
+\include{source/endmatter/colophon}
 
 \end{document}
